--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -13,3 +13,25 @@
 \newacronym{SVG}{SVG}{Scalable Vector Graphics}
 \newacronym{R3D}{R3D}{Roundtrip3D}
 \newacronym{SSIML}{SSIML}{Scene Structure and Integration Modelling Language}
+
+\newglossaryentry{SceGraToo}{
+  name=X3D,
+  description={whatever x3d is}
+}
+\newglossaryentry{OpenGL}{
+  name=X3D,
+  description={whatever x3d is}
+}
+\newglossaryentry{git}{
+  name=X3D,
+  description={whatever x3d is}
+}
+\newacronym{3D}{3D}{Scene Structure and Integration Modelling Language}
+\newacronym{DAG}{DAG}{Scene Structure and Integration Modelling Language}
+\newacronym{XML}{XML}{Scene Structure and Integration Modelling Language}
+\newacronym{VRML}{VRML}{Scene Structure and Integration Modelling Language}
+\newacronym{HTML}{HTML}{Scene Structure and Integration Modelling Language}
+\newacronym{WebGL}{WebGL}{Scene Structure and Integration Modelling Language}
+\newacronym{JSON}{JSON}{Scene Structure and Integration Modelling Language}
+\newacronym{ID}{ID}{Scene Structure and Integration Modelling Language}
+\newacronym{DOM}{DOM}{Scene Structure and Integration Modelling Language}
