--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,17 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-10 22:11:21 +0200 
+%% Created for kietsy at 2015-08-12 01:18:20 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@webpage{diff,
+	Date-Added = {2015-08-11 19:11:52 +0000},
+	Date-Modified = {2015-08-11 19:11:57 +0000},
+	Url = {https://en.wikipedia.org/wiki/Diff_utility}}
+
+@webpage{3dmeteor,
+	Date-Added = {2015-08-11 18:57:51 +0000},
+	Date-Modified = {2015-08-11 18:57:56 +0000},
+	Url = {http://3d.meteor.com/}}
+
+@webpage{x3d,
+	Date-Added = {2015-08-11 17:27:30 +0000},
+	Date-Modified = {2015-08-11 17:27:33 +0000},
+	Url = {http://www.web3d.org/x3d/what-x3d},
+	Bdsk-Url-1 = {http://www.web3d.org/x3d/what-x3d}}
 
 @webpage{reflow,
 	Date-Added = {2015-08-10 20:11:17 +0000},
 	Date-Modified = {2015-08-10 20:11:21 +0000},
-	Url = {https://developers.google.com/speed/articles/reflow}}
+	Url = {https://developers.google.com/speed/articles/reflow},
+	Bdsk-Url-1 = {https://developers.google.com/speed/articles/reflow}}
 
 @webpage{koajs,
 	Date-Added = {2015-08-10 20:01:35 +0000},
@@ -199,3 +216,42 @@
 	Year = {2012},
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2338714.2338742},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2338714.2338742}}
+
+@article{Glinz:2015:SUS:2802768.2802838,
+	Acmid = {2802838},
+	Address = {Secaucus, NJ, USA},
+	Author = {Glinz, Martin and Fricker, Samuel A.},
+	Doi = {10.1007/s00450-014-0256-x},
+	Issn = {1865-2034},
+	Issue_Date = {August 2015},
+	Journal = {Comput. Sci.},
+	Keywords = {Implicit shared understanding, Shared understanding, Software engineering},
+	Month = aug,
+	Number = {3-4},
+	Numpages = {14},
+	Pages = {363--376},
+	Publisher = {Springer-Verlag New York, Inc.},
+	Title = {On Shared Understanding in Software Engineering: An Essay},
+	Url = {http://dx.doi.org/10.1007/s00450-014-0256-x},
+	Volume = {30},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s00450-014-0256-x}}
+
+	@book{Mikowski:2013:SPW:2663433,
+	 author = {Mikowski, Michael and Powell, Josh},
+	 title = {Single Page Web Applications: JavaScript End-to-end},
+	 year = {2013},
+	 isbn = {1617290750, 9781617290756},
+	 edition = {1st},
+	 publisher = {Manning Publications Co.},
+	 address = {Greenwich, CT, USA},
+	}
+
+	@book{Vanston:2013:AD:2566740,
+	 author = {Vanston, Alex},
+	 title = {AngularJS Directives},
+	 year = {2013},
+	 isbn = {1783280336, 9781783280339},
+	 edition = {1st},
+	 publisher = {Packt Publishing},
+	} 
