--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -1,6 +1,6 @@
 % !TEX root = seminararbeit.tex
 
-\section{Prelude}
+\section{Introduction}
 \label{sec:Prelude}
 
 The goal of the thesis is to create a 3D editor, using web technologies,
@@ -17,76 +17,77 @@ graphical editor for SSIML models, to describe 3D applications. Then
 languages, such as JavaScript, Java or C++, and an \gls{X3D} file describing
 the scene. The \gls{X3D} file may contain references to other \gls{X3D} files
 containing the actual 3D data (e.g.~a car and its corresponding tires),
-hereafter called \emph{inlines} . These files are created by exporting
+hereafter called \emph{inlines}. These files are created by exporting
 objects from a 3D computer graphics software (e.g.~Blender,
 Maya or 3DS Max).\\
 The problem that arises is that each object is usually in the center of
 its own coordinate system. So they need to be translated, rotated and
-maybe even scaled, to result in desired scene (e.g.~a car where the tires
+maybe even scaled, to result in the desired scene (e.g.~a car where the tires
 are in the places they belong to and not in the center of the chassis).
 The structure is mostly generated. Attribute values of respective nodes,
-such as transformation nodes need, to be adjusted in order to compose the
+such as transformation nodes, need to be adjusted in order to compose the
 overall 3D scene.
 
 % \includegraphics{Picture of a car with the tires in the center}\\
 % \includegraphics{Picture of a car with the tires where they belong to}
 
 This can be achieved by adjusting \emph{translate}, \emph{rotate} and
-\emph{scale} properties to arrange 3D objects. To exacerbate this
-problem further, the orientation the 3D artists chose for its object may be unknown, if their is no convention for 3D modeling. \sout{Usually
-their is a convention about origin of coord system, scaling and
-orientation} (no there isn't, still not sure what to put here). However, we cannot assume that these
-conventions are always met. The main problem is, that 3D
-transformations, such as translation, orientation and scale of single 3D
-geometries, need to be adjusted. So far, there is no graphical tool that
-meets both of these requirements:
+\emph{scale} properties to arrange 3D objects. To exacerbate this problem
+further, the orientation the 3D artists chose for its object may be unknown, if
+% TODO: so what now? convention or no convention?
+their is no convention for 3D modeling. \sout{Usually their is a convention
+about origin of coord system, scaling and orientation} (no there isn't, still
+not sure what to put here). However, we cannot assume that these conventions are
+always met. The main problem is, that 3D transformations, such as translation,
+orientation and scale of single 3D geometries, need to be adjusted. So far,
+there is no graphical tool that meets both of these requirements:
 
 \begin{itemize*}
-\item user friendly and straight forward composition functionalities for \gls{X3D} scenes
-\item and preservation of (generated) information, such as node names or comments (necessary to merge the changed files back into the source model)
+  \item User friendly and straight forward composition functionalities for \gls{X3D} scenes and
+  \item preservation of (generated) information, such as node names or comments (necessary to merge the changed files back into the source model).
 \end{itemize*}
 
-The figures \ref{fig:wheel1} - \ref{fig:wheel4} demonstrate the problem.
-
-\begin{figure}[htbp]
+\begin{figure}
   \begin{minipage}{.5\textwidth}
     \includegraphics[width=0.9\textwidth]{../assets/wheel1.png}
-  	\caption{Wheel 1}
+  	\caption{One possible orientation.}
   	\label{fig:wheel1}
   \end{minipage}
   \begin{minipage}{.5\textwidth}
   	\includegraphics[width=0.9\textwidth]{../assets/wheel2.png}
-  	\caption{Wheel 2}
+  	\caption{Another possible orientation.}
   	\label{fig:wheel2}
   \end{minipage}\\
   \begin{minipage}{.5\textwidth}
   	\includegraphics[width=0.9\textwidth]{../assets/wheel3.png}
-  	\caption{Wheel 3}
+  	\caption{Yet another possible orientation.}
   	\label{fig:wheel3}
   \end{minipage}
   \begin{minipage}{.5\textwidth}
   	\includegraphics[width=0.9\textwidth]{../assets/wheel4.png}
-  	\caption{Wheel 4}
+  	\caption{An improbable orientation, unless the 3D artist was very confused.}
   	\label{fig:wheel4}
   \end{minipage}
+  \caption*{Four possible orientations the 3D model of a wheel could have.}
 \end{figure}
 
-\ref{fig:wheel1} to \ref{fig:wheel3} are common orientations, since it's disputable which of these
-could be considered be the norm.\\
-But if one depends on art from 3rd parties, the orientation and position
-could be completely arbitrary like in figure \ref{fig:wheel4}\\
+Figures \ref{fig:wheel1} - \ref{fig:wheel4} demonstrate multiple orientatins a
+3D model of a wheel can have. \ref{fig:wheel1} to \ref{fig:wheel3} are common
+orientations, since it is disputable which of these could be considered be the
+norm. But if one depends on art from 3rd parties, the orientation and position
+could be completely arbitrary like in figure \ref{fig:wheel4}
 
-These properties could be added and adjusted via any text editor by
-opening the generated \gls{X3D} file, but the resulting workflow isn't
-user-friendly:
+These properties could be added and adjusted via any text editor by opening the
+generated \gls{X3D} file, but the resulting workflow is not user-friendly. The
+following list explains the workflow using just a text editor.
 
 \begin{enumerate*}
-  \item model 3D application, including 3D scene structure
-  \item generate 3D scene and application code
-  \item run application and evaluate the scene and think about what objects need to go where and whether they need to be scaled
-  \item type random translation, rotation and scale
-  \item run the application again and evaluate whether the transformations is correct (since one does not know anything about the orientation of the object)
-  \item go back to 4. until all objects are placed correctly
+  \item Model the 3D application, including 3D the scene structure.
+  \item Generate the 3D scene and the application code.
+  \item Run the application and evaluate the scene and think about what objects need to go where and whether they need to be scaled.
+  \item Type random translation, rotation and scale values into the transform nodes.
+  \item Run the application again and evaluate whether the transformations are correct (since one does not know anything about the orientation of the object).
+  \item Go back to 4. until all objects are placed correctly.
 \end{enumerate*}
 
 Tools like Maya or Blender could also be used for this, but their import
@@ -104,6 +105,6 @@ translations, rotations and scale.
 This thesis addresses two issues:
 
 \begin{enumerate*}
-  \item allowing for composing generated X3D scenes (with focus on usability). E. g., besides a 3D view, a tree view for fine grained editing should not only visualize the 3D scene's structure, but also allow for entering concrete coordinate values.
-  \item during the editing process, the preservation of all information/metadata must be guaranteed.
+  \item Allowing for composing generated X3D scenes (with focus on usability). E.g., besides a 3D view, a tree view for fine grained editing should not only visualize the 3D scene's structure, but also allow for entering concrete coordinate values.
+  \item During the editing process, the preservation of all information/metadata must be guaranteed.
 \end{enumerate*}
